--- a/app/src/main/res/layout/item_part.xml
+++ b/app/src/main/res/layout/item_part.xml
@@ -54,10 +54,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvPartName" />
 
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+        <ImageButton
+            android:id="@+id/btnAddToCart"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/add_circle"
+            android:padding="4dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/ic_add"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
