--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -117,6 +117,9 @@
         <action
             android:id="@+id/action_homeFragment_to_bikesFragment"
             app:destination="@id/bikesFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_myBikeFragment"
+            app:destination="@id/myBikeFragment" />
     </fragment>
 
     <fragment
@@ -170,7 +173,11 @@
         android:id="@+id/servicePackageFragment"
         android:name="com.example.xtrememoto.ui.service.ServicePackageFragment"
         android:label="fragment_service_package"
-        tools:layout="@layout/fragment_service_package" />
+        tools:layout="@layout/fragment_service_package" >
+        <action
+            android:id="@+id/action_servicePackageFragment_to_addServiceBookingFragment"
+            app:destination="@id/addServiceBookingFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/serviceBookingFragment"
